MY DEV ORG/src/objects/LiveText__Campaign_Send_Member__c.object
<CustomObject>
    <description>The Campaign Send Member object represents a member of a Send.</description>
    <fields>
        <fullName>LiveText__CampaignMemberId__c</fullName>
        <description>Id of the Campaign Member.</description>
        <inlineHelpText>Id of the Campaign Member.</inlineHelpText>
        <label>CampaignMemberId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__CampaignSend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the CampaignSend.</description>
        <inlineHelpText>Lookup to the CampaignSend.</inlineHelpText>
        <label>CampaignSend</label>
        <referenceTo>LiveText__Campaign_Send__c</referenceTo>
        <relationshipLabel>CampaignSendMembers</relationshipLabel>
        <relationshipName>CampaignSendMembers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__FromNumber__c</fullName>
        <description>Formula to CampaignSend Support Number.</description>
        <formula>LiveText__CampaignSend__r.LiveText__SupportNumber__r.LiveText__Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to CampaignSend Support Number.</inlineHelpText>
        <label>FromNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Phone__c</fullName>
        <description>Preferred phone number from Campaign Member.</description>
        <inlineHelpText>Preferred phone number from Campaign Member.</inlineHelpText>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LiveText__isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this member has been processed.</description>
        <inlineHelpText>Whether or not this member has been processed.</inlineHelpText>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Send Member</label>
    <nameField>
        <label>Campaign Send Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampaignSendMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>